apps/news-app-ui/overlays/prod/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-app-ui
  namespace: news-app-ui
spec:
  replicas: 3
