apps/news-app-ui/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-app-ui
  namespace: news-app-ui
spec:
  tls:
    - hosts:
        - news-app-ui.khumo.cloud
      secretName: news-app-ui-certificate-secret
  rules:
    - host: news-app-ui.khumo.cloud
